--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.xlsx
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -132,3 +131,6 @@ dmypy.json
 
 # VSCode settings
 .vscode
+
+# sample
+out/
